--- a/openapi/reference.page.yaml
+++ b/openapi/reference.page.yaml
@@ -1,6 +1,8 @@
 type: reference-docs
 definitionId: petstore
 settings:
+  pagination: section
+  showConsole: true
   generateCodeSamples:
     languages:
       - lang: curl
