--- a/sidebars.yaml
+++ b/sidebars.yaml
@@ -1,41 +1,22 @@
 training:
   - page: developer-portal/index.md
-  - group: Petstore reference
-    expanded: false
-    pages:
-      - page: openapi/reference.page.yaml/*
   - group: Local Spec reference
-    expanded: false
+    expanded: true
     pages:
       - page: openapi/reference1.page.yaml/*
-  - group: Remote Spec reference
+  - group: Sample API
     expanded: false
     pages:
       - page: openapi/reference2.page.yaml/*
+  - group: Petstore
+      expanded: false
+      pages:
+        - page: openapi/reference3.page.yaml/*
+  - group: Direct Debit
+      expanded: false
+      pages:
+        - page: openapi/reference4.page.yaml/*
 
-  - group: Admin
-    expanded: true
-    pages:
-      - group: Routine
-        expanded: true
-        pages:
-          - group: Rock
-            expanded: true
-            pages:
-              - group: Paper
-                expanded: true
-                pages:
-                  - group: Scissors
-                    expanded: true
-                    pages:
-                      - group: 1-2-3
-                        expanded: true
-                        pages:
-                          - group: Go
-                            expanded: true
-                            pages:
-                              - label: Upgrading
-                                # page: developer-portal/upgrade.md
 alternative:
   - page: developer-portal/sidebar-alternative.md
     label: Alternative sidebar example
