Updated side bars

--- a/sidebars.yaml
+++ b/sidebars.yaml
@@ -1,13 +1,13 @@
 training:
   - page: developer-portal/index.md
-  - group: Local Spec reference
-    expanded: true
-    pages:
-      - page: openapi/reference1.page.yaml/*
-  - group: Direct Debit
+  - group: Local Specc reference
     expanded: false
     pages:
-      - page: openapi/reference4.page.yaml/*
+      - page: openapi/reference1.page.yaml/*
+  - group: Sample API
+    expanded: false
+    pages:
+      - page: openapi/reference2.page.yaml/*
 
 alternative:
   - page: developer-portal/sidebar-alternative.md
