--- a/sidebars.yaml
+++ b/sidebars.yaml
@@ -8,6 +8,10 @@ training:
     expanded: false
     pages:
       - page: openapi/reference2.page.yaml/*
+  - group: Direct Debit
+    expanded: false
+    pages:
+      - page: openapi/reference4.page.yaml/*
 
 alternative:
   - page: developer-portal/sidebar-alternative.md
