--- a/sidebars.yaml
+++ b/sidebars.yaml
@@ -8,6 +8,10 @@ training:
     expanded: false
     pages:
       - page: openapi/reference2.page.yaml/*
+  - group: Pet Store
+    expanded: false
+    pages:
+      - page: openapi/reference3.page.yaml/*
   - group: Direct Debit
     expanded: false
     pages:
