--- a/openapi/directdebit.yaml
+++ b/openapi/directdebit.yaml
@@ -4,7 +4,7 @@ x-stoplight:
 info:
   title: Direct Debits API
   description: Direct Debits API
-  version: '1.0'
+  version: '2.0'
   contact:
     name: PaaS Team
     email: bjm@cba.com.au
@@ -14,7 +14,7 @@ servers:
 paths:
   /agreements:
     post:
-      summary: Create an Agreement
+      summary: Create an Agreements
       operationId: post-agreements
       responses:
         '200':
