--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -14,7 +14,7 @@ logo:
 toc:
   enable: true
 oasDefinitions:
-  openapilocal: ./openapi/sampleapi.yaml
+  openapilocal: ./openapi/sampleAPI/sampleapi.yaml
   petstore: https://api.redocly.com/registry/bundle/api-portal/Petstore/v1/openapi.yaml?branch=main
   sampleapi: https://api.redocly.com/registry/bundle/api-portal/Sample%20API/1.0/openapi.yaml?branch=main
   openapi3.1.0: https://api.redocly.com/registry/bundle/api-portal/Openapi%203.1.0%20sample/v1.0/openapi.yaml?branch=main
