--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "clean": "redocly-portal clean"
   },
   "dependencies": {
-    "@redocly/developer-portal": "1.1.0-beta.118"
+    "@redocly/developer-portal": "1.1.0-beta.118",
+    "core-js": "^3.26.1",
+    "mobx": "^6.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "redoc": "^2.0.0",
+    "styled-components": "^5.3.6"
   }
 }
