--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Redocly portal template repository",
   "license": "MIT",
   "scripts": {
+    "preinstall": "yarn config set ignore-engines true",
     "start": "redocly-portal develop -p 3000",
     "build": "redocly-portal build",
     "clean": "redocly-portal clean"
