--- a/catalog.yaml
+++ b/catalog.yaml
@@ -1,6 +1,6 @@
 
 apiCatalog:
-  - title: ACME
+  - title: DirectDebit
     disableAutoSidebar: true
     versions:
-      - link: https://api.redocly.com/registry/assets/api-portal/Direct%20DebitGITHUB/V0.1?branch=main
+      - link: https://api.redoc.ly/registry/assets/api-portal/Direct%20DebitGITHUB
