--- a/sidebars.yaml
+++ b/sidebars.yaml
@@ -1,5 +1,6 @@
 training:
   - page: developer-portal/index.md
+  - page: apis.mdx
   - group: Local Spec reference
     expanded: false
     pages:
