--- a/sidebars.yaml
+++ b/sidebars.yaml
@@ -9,15 +9,15 @@ training:
     expanded: false
     pages:
       - page: openapi/reference2.page.yaml/*
-  - group: Sample API Openapi 3.1.0
+  - group: Direct Debit CLI
     expanded: false
     pages:
       - page: openapi/reference5.page.yaml/*
-  - group: Direct Debit
+  - group: Direct Debit GIT HUB
     expanded: false
     pages:
       - page: openapi/reference4.page.yaml/*
-  - group: Pet Store
+  - group: PET Store
     expanded: false
     pages:
       - page: openapi/reference3.page.yaml/*
